--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </main>
 
     <footer>
-        <p>Site Criado Por <a href="https://www.instagram.com/miguel.nicoli/" target="_blank" rel="external">Miguel N.</a> Para o Curso do <a href="https://www.youtube.com/@CursoemVideo" target="_blank" rel="external">CursoemVideo</a></p>
+        <p>Site Criado Por <a href="https://www.instagram.com/miguel.nicoli/" target="_blank" rel="external">Miguel N.</a> Para o Curso do <a href="https://www.youtube.com/@CursoemVideo" target="_blank" rel="external">CursoEmVideo</a></p>
     </footer>
     
 </body>
